Phase 5 Work: User can upload, edit and remove clothing items correctly. There are also the new fixes of when a user chooses a clothing style, it shows the clothing items for that clothing style and that for a new user, since they have not uploaded anything, the cards will remain blank until an upload is made. Also, an outfit has to be fully made, cannot be partial.